--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ AUDIT_LOG=./logs/audit.log
 LOGIN_PASSWORD=MeinSicheresPasswort123
 
 # Firebase Realtime Database URL (e.g., https://myproject.firebaseio.com)
-FIREBASE_DB_URL=https://myfirebaseproject.firebaseio.com
+FIREBASE_DB_URL=https://nightheaven-4bc2b-default-rtdb.europe-west1.firebasedatabase.app/
 
 # Optional Firebase database auth token (service account or secret)
 FIREBASE_AUTH_TOKEN=eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9...
